# pymtcm

./: README.md  new.ipynb  pyproject.toml  requirements.txt  test.py
mtcm/: __init__.py  common.py  functions.py  solvers.py  visualization.py
pymtcm/: __init__.py  functions.py  solvers.py  visualization.py
