[build-system]
requires = [
    "flit_core >=2,<4"
]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "mtcm"
author = "Reignard Tan"
author-email = "reignard.tan@multiconsult.no"
home-page = "https://github.com/reigt/mtcm"
description-file = "README.md"
requires-python = ">=3.10"
requires = [
    "numpy>=1.22.4",
    "pandas>=1.4.2",
    "plotly>=5.8.1",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[tool.black]
line-length = 79
skip-string-normalization = "True"
check = "True"
diff = "True"